Fixing layout bug when the annoyng message is shown

--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -24,14 +24,13 @@
 
 span.persistent_message
   text-align: center
-  
+ 
   background-color: #FF8
   width: 100%
-  padding: 3px 8px
+  padding: 3px 0
   position: relative
   top: -26px
   display: block
-  margin: auto
 
 #messages li
   list-style: none
